--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_STRING = "mongodb+srv://alancarroll89:MubZFuEMBpE98s@watch-next-movies.ye6bijo.mongodb.net/?retryWrites=true&w=majority"
+# DB_STRING = "mongodb+srv://alancarroll89:MubZFuEMBpE98s@watch-next-movies.ye6bijo.mongodb.net/?retryWrites=true&w=majority"
